# CudaBird

./: .gitignore  README.md
cudabird_project/: CMakeLists.txt  visualizer.html
cudabird_project/scripts/: run_experiment.sh
cudabird_project/src/: config.h  cuda_utils.cu  cuda_utils.h  main.cu  main_cpu.cpp
cudabird_project/src/evolution/: evolution.h  evolution_kernels.cu  evolution_kernels.h
cudabird_project/src/game/: game_kernels.cu  game_kernels.h  game_state.h
cudabird_project/src/neural_net/: network.h  network_kernels.cu  network_kernels.h
cudabird_project/src/visualization/: renderer.cpp  renderer.h
cudabird_project/tests/: test_evolution.cu  test_game.cu  test_network.cu  test_renderer.cpp
